--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
+    "firebase": "^11.9.1",
     "giantbomb": "^2.0.2",
     "jsonp": "^0.2.1",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuefire": "^3.2.1"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
