--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^11.9.1",
     "giantbomb": "^2.0.2",
     "jsonp": "^0.2.1",
+    "primeicons": "^7.0.0",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
