--- a/package.json
+++ b/package.json
@@ -13,14 +13,17 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
     "firebase": "^11.9.1",
     "giantbomb": "^2.0.2",
     "jsonp": "^0.2.1",
     "primeicons": "^7.0.0",
+    "primevue": "^4.3.5",
     "tailwindcss": "^4.1.8",
     "vue": "^3.5.13",
+    "vue-carousel": "^0.18.0",
     "vue-router": "^4.5.0",
     "vuefire": "^3.2.1"
   },
