--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.3.5",
     "tailwindcss": "^4.1.8",
+    "tailwindcss-primeui": "^0.6.1",
     "vue": "^3.5.13",
     "vue-carousel": "^0.18.0",
     "vue-router": "^4.5.0",
+    "vue-toast-notification": "^3.1.3",
     "vuefire": "^3.2.1"
   },
   "devDependencies": {
