--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
     "@primeuix/themes": "^1.1.2",
     "@tailwindcss/vite": "^4.1.8",
     "axios": "^1.9.0",
